--- a/_jadefiles/about.jade
+++ b/_jadefiles/about.jade
@@ -6,9 +6,9 @@ section
     .flip-container(ontouchstart="this.classList.toggle('hover');")
      .flipper
        .front
-          div.face-img
+        //  div.face-img
        .back
-          div.face1-img
+        //  div.face1-img
 
   // div(class="glyph-icon flaticon-cogwheel28")
   // div(class="glyph-icon flaticon-computer1")
