--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -10,5 +10,5 @@ header#home
 
 
   h1
-    span John Smith
-  p.kicker Software Engineer // Developer // Designer
+    span Murad Awan
+  p.kicker Writer // Writer // Writer
